# serd-sys

./: Cargo.toml  LICENSE  README.md  build.rs  test.nt  wrapper.h
.github/workflows/: ci.yaml
src/: lib.rs
