[package]
name = "serd-sys"
version = "0.1.1"
authors = ["Bastian Müller <bastian@turbolent.com>"]
description = "Bindings to Serd, a lightweight RDF syntax library."
readme = "README.md"
license = "MIT"
repository = "https://github.com/turbolent/serd-sys"
build = "build.rs"
keywords = ["N-Triples", "Turtle", "RDF", "parser"]
categories = ["parsing", "data-structures", "api-bindings"]

[dependencies]
libc = "0.2.32"

[build-dependencies]
bindgen = "0.60.1"
pkg-config = "0.3.25"
